[project]
name = "pilates-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "pymupdf>=1.25.5",
    "pytube>=15.0.0",
    "unstructured>=0.17.2",
    "youtube-transcript-api>=1.0.3",
    "websockets==11.0.3"

]
